# cpp-hello-world-apps

./: README.md
HelloWorld-cmake-gpp/: CMakeLists.txt
HelloWorld-cmake-gpp/src/: main.cpp
HelloWorld-cpm/: CMakeLists.txt  CPM.cmake
HelloWorld-cpm/src/: main.cpp
HelloWorld-oop/: CMakeLists.txt
HelloWorld-oop/src/: main.cpp
HelloWorld-oop/src/model/: Developer.cpp  Employee.cpp  EmployeeAbstract.hpp
docs/: BUILD_NOTE.md  Notes-Build-[CMAKE&GPP].md
